add zrouter.py and modify file path

--- a/zrouter/自测流程.md
+++ b/zrouter/自测流程.md
@@ -1,20 +1,46 @@
->目前zrouter的自动化测试一共分成三个部分，api，wan，wifi
+# 自动化测试说明
+## 版本
 
-#### 0. 测试准备
- - 1、准备待测试样机，记录MAC地址，测试版本，将信息更新到zunittest\zrouter\zrouter.conf配置文件中
- - 2、将zautotest版本烧录到测试路由器，恢复出厂设置，IP设置为192.168.10.1网段（做wan口测试服务器）
+|版本号|制定人|说明|日期|
+|:----    |:---|:----- |-----   |
+|1.0 |林业  |初始化 |  2019-10-28    |
+
+**注：请先查看测试逻辑文档再进行测试\<软件自动化测试介绍v0.2.docx\>**
+
+## 路由模块测试
+>目前zrouter的自动化测试一共分成三个部分：api，wan，wifi
+
+### 0. 测试准备
+ - 1、准备待测试样机，恢复出厂设置，记录MAC地址，测试版本，将信息更新到zunittest\zrouter\zrouter.conf配置文件中
+ - 2、将zautotest版本烧录到测试路由器，恢复出厂设置，IP设置为192.168.10.1网段（做wan口pppoe测试服务器）
  - 3、将测试路由器的WAN口接到zautotest版本的路由器，zautotest版本的路由器接外网，LAN口接到电脑，电脑接无线网卡
  
-#### 1. api测试
+### 1. api测试
  - 1、打开终端进入zunittest\zrouter\api\scripts\目录下
  - 2、输入`api.py dynamic`进行动态api测试，待测试完毕查看zunittest\zrouter\api\results\目下的测试结果是否正常
  - 3、输入`api.py static`进行静态api测试，待测试完毕查看zunittest\zrouter\api\results\目下的测试结果是否正常
 >注：静态api测试完成会重启路由器
 
-#### 2.wan口功能测试
+### 2.wan口功能测试
  - 1、打开终端进入zunittest\zrouter\func\wan\scripts\目录下
  - 2、输入`wan.py`进行wan口功能测试，待测试完毕查看zunittest\zrouter\func\wan\results\目下的测试结果是否正常
 
-#### 3.wifi功能测试
+### 3.wifi功能测试
  - 1、打开终端进入zunittest\zrouter\func\wifi\scripts\目录下
  - 2、输入`wifi.py`进行wifi功能测试，待测试完毕查看zunittest\zrouter\func\wifi\results\目下
+ 
+## zgateway测试
+>目前zgateway的自动化测试还比较基础，需要后面慢慢完善
+
+### 0. 测试准备
+ - 1、准备待测试样机，记录MAC地址，测试版本，将信息更新到zunittest\zrouter\zrouter.conf配置文件中
+ - 2、将要测试的link服务器，zgateway/IOT版本等信息更新到zunittest\zrouter\func\zgateway\zgateway.conf配置文件中
+ - 3、准备待测试的zigbee开关，2.4G灯并将设备信息更新到zunittest\zrouter\func\zgateway\zgateway.conf配置文件中
+ 
+### 1. zgateway测试
+ - 1、打开终端进入zunittest\zrouter\func\zgateway\scripts\目录下
+ - 2、输入`zgateway.py`进行zgateway测试，待测试完毕查看zunittest\zrouter\func\zgateway\results\目下
+>注：测试到zigbee入网时需要手动按下设备使其进入入网模式
+
+## 全部测试
+>集成脚本zrouter.py可以按顺序运行上面全部脚本
